--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -54,3 +54,11 @@ jobs:
           version: latest
           args: --timeout=3m
 
+  dependency-review:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.19'
+      - uses: actions/dependency-review-action@v2
