--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,9 +4,11 @@ on:
   release:
     types:
       - published
+
   push:
     branches:
-      - master
+      - main
+
   pull_request:
     paths-ignore:
       - '.github/workflows/pr.yml'
