--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,8 +10,6 @@ on:
       - main
 
   pull_request:
-    paths-ignore:
-      - '.github/workflows/pr.yml'
     branches:
       - main
 
@@ -22,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.19'
+          go-version: '^1.21'
 
       - name: go test
         run: go build
@@ -33,11 +31,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.19'
+          go-version: '^1.21'
 
       - name: go test
         run: |
-          go test -race -cover ./... -covermode=atomic -coverprofile coverage.out
+          go test -v -race -cover ./... -covermode=atomic -coverprofile coverage.out
 
       - name: Upload coverage file
         uses: codecov/codecov-action@v3
@@ -48,7 +46,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.19'
+          go-version: '^1.21'
 
       - name: golangci-lint run
         uses: golangci/golangci-lint-action@v2
